<resources>
    <string name="app_name">Persons</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="general_error">Sorry an error has happened, please try again later!</string>
    <string name="invalid_email">Please enter a vaild email</string>
    <string name="invalid_password">Password must be 8 characters long</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="logging_user_in">Logging in</string>
    <string name="password_cant_be_spaces">Password can\'t be spaces</string>
    <string name="wrong_login_combination">Wrong login email/password combination</string>
    <string name="log_out">Log out</string>
    <string name="no_phone_numbers">No Phone Numbers.</string>
    <string name="no_emails">No Emails.</string>

</resources>
